alignment correction for homepage

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(1, 1fr);
-  gap: 30px;
+  gap: 20px;
 }
 
 .gallery-item {
@@ -16,6 +16,8 @@
   height: 100%;
   object-fit: contain;
   transition: 0.8s;
+  max-height: 320px;
+  overflow: hidden;
 }
 
 .gallery__media:hover {
@@ -69,6 +71,7 @@
 .gallery__item--3 {
   grid-column: 1 / span 3;
   grid-row: auto;
+  margin-right: auto;
 }
 
 .gallery__item--4 {
@@ -94,6 +97,7 @@
 .gallery__item--8 {
   grid-column: 1 / span 3;
   grid-row: 4;
+  margin-right: auto;
 }
 
 .gallery__item--9 {
